--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
   get: ^4.6.6
-
+  go_router: ^14.6.1
+  google_fonts: ^6.2.1
+#  google_fonts_arabic: ^1.0.1
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
