--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
