--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   font_awesome_flutter: ^10.8.0
   get: ^4.6.6
+  get_it: ^8.0.3
   go_router: ^14.6.1
   google_fonts: ^6.2.1
 #  google_fonts_arabic: ^1.0.1
